--- a/source/layouts/layout_about.haml
+++ b/source/layouts/layout_about.haml
@@ -6,9 +6,10 @@
   = partial("partials/head")
   %body
     /[if lt IE 7]<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    = partial("partials/main-nav")
     %header
-      %div{:class => "contain"}
-        %div{:role => "main", :class => "main"}
+      %div{:role => "main", :class => "main"}
+        %div{:class => 'contain'}
           = yield
     = partial("partials/footer")
 
