--- a/source/partials/footer.haml
+++ b/source/partials/footer.haml
@@ -1,5 +1,13 @@
 %footer
-  %p
-    &copy; JXF.me
-    - current_year = DateTime.now.year
-    = current_year
+  %div{:class => 'contain'}
+    %p{:class => 'left'}
+      &copy; JXF.me
+      - current_year = DateTime.now.year
+      = current_year
+    %ul{:class => 'right'}
+      %li
+        = link_to 'Twitter', '/'
+      %li
+        = link_to 'Facebook', '/'
+      %li
+        = link_to 'Blog', '/'
