--- a/source/layouts/layout_homepage.haml
+++ b/source/layouts/layout_homepage.haml
@@ -4,12 +4,36 @@
 /[if IE 8] <html class="no-js lt-ie9">
 %html.no-js
   = partial("partials/head")
-  %body
+  %body{:class => page_classes}
     /[if lt IE 7]<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     = partial("partials/main-nav")
     %header
       %div{:role => "main", :class => "main"}
         = yield
+    %div{:class => 'recent-posts'}
+      %h2
+        Recent Posts
+      %div{:class => 'post'}
+        %h1{:class => 'post-title'}
+          Post Title
+        %p{:class => 'post-excerpt'}
+          Sed elementum aliquam tempus. Quisque aliquam non dolor sit amet ultricies. Cras risus dolor, tincidunt sed consectetur sit amet, faucibus id nisi. Cras non augue a ligula malesuada malesuada eu id enim...
+          %div
+            = link_to 'Read more »', '/blog'
+      %div{:class => 'post'}
+        %h1{:class => 'post-title'}
+          Post Title
+        %p{:class => 'post-excerpt'}
+          Sed elementum aliquam tempus. Quisque aliquam non dolor sit amet ultricies. Cras risus dolor, tincidunt sed consectetur sit amet, faucibus id nisi. Cras non augue a ligula malesuada malesuada eu id enim...
+          %div
+            = link_to 'Read more »', '/blog'
+      %div{:class => 'post'}
+        %h1{:class => 'post-title'}
+          Post Title
+        %p{:class => 'post-excerpt'}
+          Sed elementum aliquam tempus. Quisque aliquam non dolor sit amet ultricies. Cras risus dolor, tincidunt sed consectetur sit amet, faucibus id nisi. Cras non augue a ligula malesuada malesuada eu id enim...
+          %div
+            = link_to 'Read more »', '/blog'
     = partial("partials/footer")
 
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
