--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,6 +6,7 @@
   = partial("partials/head")
   %body
     /[if lt IE 7]<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    = partial("partials/main-nav")
     %header
       %div{:class => "contain"}
         %div{:role => "main", :class => "main"}
