--- a/source/partials/head.haml
+++ b/source/partials/head.haml
@@ -12,5 +12,6 @@
   %title= page_title
   %meta{:content => page_description, :name => "description"}
   %meta{:content => "width=device-width", :name => "viewport"}
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   = javascript_include_tag "actions"
   = stylesheet_link_tag "main"
