--- a/source/partials/main-nav.haml
+++ b/source/partials/main-nav.haml
@@ -1,9 +1,13 @@
 %nav
   %div{:class => 'contain'}
-    %div{:class => 'header-logo'}
-      = link_to 'John Feminella', '/'
     %ul
       %li
-        = link_to 'Portfolio', '/portfolio'
-      %li
         = link_to 'Blog', '/blog'
+      %li
+        = link_to 'Portfolio', '/portfolio'
+      %li{:class => 'header-logo'}
+        = link_to 'JXF', '/'
+      %li
+        = link_to 'Contact', '/contact'
+      %li
+        = link_to 'Meta', '/meta'
