--- a/source/assets/stylesheets/partials/_pages.scss
+++ b/source/assets/stylesheets/partials/_pages.scss
@@ -22,6 +22,14 @@
   .post:last-child{
     margin-bottom: 20px;
   }
+  .post-title{
+    font-size: 20px;
+  }
+  aside{
+    h2{
+      text-align: left;
+    }
+  }
 }
 @media handheld, only screen and (max-width: 767px){
   .title{
