--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,25 +6,34 @@ blog: blog
 :ruby
   latest_articles = page_articles.sort_by{|a| a.date }.reverse[0,5]
 
-%h1.logo JXF
+%div.head-shot
+  %img{:src => "http://placehold.it/150x150"}
 
-%h3.title Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel lectus ultrices, condimentum enim et, varius lorem. In sagittis a nisl nec auctor.
+%div.name
+  John Feminella
 
-%p
-  %img{:src => "/assets/images/placeholder.png", :class => 'res-img'}
+%div.desc
+  %h3 Technologist
+  %h3 Entrepreneur
+  %a.btn{href: "/contact"} Let's work together
 
-%h2 About John
-
-%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lacinia est felis, nec tristique massa pulvinar nec. Nullam iaculis lorem nibh, eu vehicula enim euismod non. Duis lobortis, enim eget accumsan sagittis.
-
-%p Phasellus sapien ipsum, sodales vel lobortis ac, fringilla facilisis diam. Vestibulum at tellus vitae magna tempus blandit ac a nunc. Suspendisse sodales eget risus eu hendrerit.
-
-%p
-  %a.btn{href: "/portfolio"} View my work
-
-%aside.columns.large-4
-  %h2 Recent Posts
-  -latest_articles[0...3].each do |article|
-    %div{:class => 'post'}
-      %h1.post-title=blog_link article
-      %p.post-excerpt=article.body
+%section{:class => 'stream'}
+  %div{:class => 'contain contain-pad'}
+    %div{:class => 'col-6-12'}
+      %aside
+        %h2 Writings
+        -latest_articles[0...3].each do |article|
+          %div{:class => 'post'}
+            %h1.post-title
+              <i class="fa fa-chain"></i>
+              =blog_link article
+              =link_to article.summary(50, "»")
+    %div{:class => 'col-6-12'}
+      %aside
+        %h2 Activities
+        -latest_articles[0...3].each do |article|
+          %div{:class => 'post'}
+            %h1.post-title
+              <i class="fa fa-chain"></i>
+              =blog_link article
+              =link_to article.summary(50, "»")
