--- a/source/partials/main-nav.haml
+++ b/source/partials/main-nav.haml
@@ -2,12 +2,12 @@
   %div{:class => 'contain'}
     %ul
       %li
-        = link_to 'Blog', '/blog'
+        = link_to 'blog', '/blog'
       %li
-        = link_to 'Portfolio', '/portfolio'
+        = link_to 'portfolio', '/portfolio'
       %li{:class => 'header-logo'}
-        = link_to 'JXF', '/'
+        = link_to 'jxf', '/'
       %li
-        = link_to 'Contact', '/contact'
+        = link_to 'contact', '/contact'
       %li
-        = link_to 'Meta', '/meta'
+        = link_to 'meta', '/meta'
