--- a/source/partials/footer.haml
+++ b/source/partials/footer.haml
@@ -1,13 +1,13 @@
 %footer
   %div{:class => 'contain'}
     %p{:class => 'left'}
-      &copy; JXF.me
+      &copy; jxf
       - current_year = DateTime.now.year
       = current_year
     %ul{:class => 'right'}
       %li
-        = link_to 'Twitter', '/'
+        %a{:href => 'https://twitter.com/'}
+          <i class="fa fa-twitter"></i>
       %li
-        = link_to 'Facebook', '/'
-      %li
-        = link_to 'Blog', '/'
+        %a{:href => 'https://linkedin.com/'}
+          <i class="fa fa-linkedin"></i>
