--- a/source/layouts/layout_blog.haml
+++ b/source/layouts/layout_blog.haml
@@ -9,7 +9,7 @@
     = partial("partials/main-nav")
     %header
       %div{:class => "contain"}
-        %div{:role => "main", :class => "main"}
+        %div{:role => "main", :class => "main-blog"}
           = yield
     = partial("partials/footer")
 
