--- a/source/assets/stylesheets/partials/_base.scss
+++ b/source/assets/stylesheets/partials/_base.scss
@@ -146,7 +146,6 @@ img.profile{
   width: 100%;
 }
 .blog{
-  padding: 15px 20px 15px 20px;
   p{
     line-height: 1.5;
     color: #999;
@@ -162,6 +161,7 @@ img.profile{
   text-transform: uppercase;
   font-family: $font-text;
   color: #999;
+  padding: 0px 5px 0px 5px;
 }
 .social{
   text-align: center;
@@ -174,6 +174,21 @@ img.profile{
       font-size: 20px;
     }
   }
+}
+.blog-wrapper{
+  padding: 50px 20px 50px 20px;
+  .post-title{
+    line-height: 1.3;
+  }
+}
+.main-blog{
+  padding: 50px 20px 50px 20px;
+}
+.tags{
+  line-height: 1.5;
+}
+.port-item{
+  padding: 30px;
 }
 footer{
   @extend .cf;
