--- a/source/assets/stylesheets/partials/_pages.scss
+++ b/source/assets/stylesheets/partials/_pages.scss
@@ -23,11 +23,41 @@
     margin-bottom: 20px;
   }
   .post-title{
-    font-size: 16px;
+    font-size: 14px;
+    max-width: 350px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   aside{
     h2{
       text-align: left;
+      span{
+        float: right;
+        font-size: 14px;
+        font-family: $font-text;
+      }
+    }
+  }
+  .inner-post{
+    padding: 30px;
+  }
+}
+.blog{
+  footer{
+    margin-top: 50px;
+  }
+  .post-title{
+    line-height: 1.3;
+  }
+  article{
+    .grid{
+      .col-3-12{
+        padding: 10px 0px 0px 0px;
+      }
+      .col-9-12{
+        padding: 0px 0px 30px 0px;
+      }
     }
   }
 }
