--- a/source/assets/stylesheets/partials/_pages.scss
+++ b/source/assets/stylesheets/partials/_pages.scss
@@ -24,10 +24,7 @@
   }
   .post-title{
     font-size: 14px;
-    max-width: 350px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    line-height: 1.5;
   }
   aside{
     h2{
@@ -44,6 +41,9 @@
   }
 }
 .blog{
+  .article-date{
+    font-size: 16px;
+  }
   footer{
     margin-top: 50px;
   }
