--- a/source/blog/index.html.haml
+++ b/source/blog/index.html.haml
@@ -8,14 +8,15 @@ layout: layout_blog
   %article{class: article.data.link ? "blog link" : "blog"}
     %div{:class => 'grid grid-pad'}
       %div{:class => 'col-3-12'}
-        %p
+        %p{:class => 'article-date'}
+          <i class="fa fa-chain"></i>
           =dt article.date
           %div{:class => 'tags'}=tag_list article.tags
       %div{:class => 'col-9-12'}
         %h1.post-title
-          <i class="fa fa-chain"></i>
           =blog_link article
-        =article.summary(250, "...")
+        =article.summary
+        =link_to 'Read more »', article
   -if paginate
     %span.pagination
       -if prev_page
