--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -36,11 +36,15 @@ blog: blog
               %a.btn{href: "/blog"} View more »
           -latest_articles[0...3].each do |article|
             %div{:class => 'post'}
-              %h1.post-title
-                <i class="fa fa-chain"></i>
-                %span.date-meta
-                  =article.date.strftime('%b %e')
-                =blog_link article
+              %div{:class => 'small-grid'}
+                %div{:class => 'col-3-12'}
+                  %h1.post-title
+                    <i class="fa fa-chain"></i>
+                    %span.date-meta
+                      =article.date.strftime('%b %e')
+                %div{:class => 'col-9-12'}
+                  %h1.post-title
+                    =blog_link article
     %div{:class => 'col-6-12'}
       %div{:class => 'inner-post'}
         %aside
@@ -50,8 +54,12 @@ blog: blog
               %a.btn{href: "/blog"} View more »
           -latest_articles[0...3].each do |article|
             %div{:class => 'post'}
-              %h1.post-title
-                <i class="fa fa-chain"></i>
-                %span.date-meta
-                  =article.date.strftime('%b %e')
-                =blog_link article
+              %div{:class => 'small-grid'}
+                %div{:class => 'col-3-12'}
+                  %h1.post-title
+                    <i class="fa fa-chain"></i>
+                    %span.date-meta
+                      =article.date.strftime('%b %e')
+                %div{:class => 'col-9-12'}
+                  %h1.post-title
+                    =blog_link article
