--- a/source/partials/head.haml
+++ b/source/partials/head.haml
@@ -13,5 +13,5 @@
   %meta{:content => page_description, :name => "description"}
   %meta{:content => "width=device-width", :name => "viewport"}
   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  = javascript_include_tag "actions"
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   = stylesheet_link_tag "main"
