--- a/source/layouts/item.haml
+++ b/source/layouts/item.haml
@@ -7,11 +7,11 @@
           =dt current_page.date
           %span=tag_list current_page.data.tags
       =yield
-      -if current_page.previous_article
-        %span.prev
-          &laquo;
-          =link_to truncate(current_page.previous_article.title, length: 30), current_page.previous_article
-      -if current_page.next_article
-        %span.next
-          =link_to truncate(current_page.next_article.title, length: 30), current_page.next_article
-          &raquo;
+      / -if current_page.previous_article
+      /   %span.prev
+      /     &laquo;
+      /     =link_to truncate(current_page.previous_article.title, length: 30), current_page.previous_article
+      / -if current_page.next_article
+      /   %span.next
+      /     =link_to truncate(current_page.next_article.title, length: 30), current_page.next_article
+      /     &raquo;
