--- a/source/assets/stylesheets/partials/_grid.scss
+++ b/source/assets/stylesheets/partials/_grid.scss
@@ -15,6 +15,11 @@ body{
 [class*='col-']:last-of-type{
   padding-right: 0px;
 }
+.main{
+  max-width: 700px;
+  margin: auto;
+  width: 100%;
+}
 .contain{
   width: 100%;
   max-width: 855px;
