Updated blog and portfolio archives to pull in proper meta data, removed YAML data file, updated some repeated styles, changed contact link to services in nav

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@ blog: blog
 %div.desc
   %h3 Technologist
   %h3 Entrepreneur
-  %a.btn{href: "/contact"} Let's work together
+  %a.btn{href: "/meta"} Let's work together
 
 %section{:class => 'stream'}
   %div{:class => 'contain contain-pad'}
