--- a/source/partials/main-nav.haml
+++ b/source/partials/main-nav.haml
@@ -8,6 +8,6 @@
       %li{:class => 'header-logo'}
         = link_to 'jxf', '/'
       %li
-        = link_to 'contact', '/contact'
+        = link_to 'services', '/services'
       %li
         = link_to 'meta', '/meta'
