--- a/source/blog/index.html.haml
+++ b/source/blog/index.html.haml
@@ -9,13 +9,14 @@ layout: layout_blog
     %div{:class => 'grid grid-pad'}
       %div{:class => 'col-3-12'}
         %p{:class => 'article-date'}
-          <i class="fa fa-chain"></i>
+          <i class="fa fa-#{article.data.icon}"></i>
           =dt article.date
           %div{:class => 'tags'}=tag_list article.tags
       %div{:class => 'col-9-12'}
         %h1.post-title
           =blog_link article
-        =article.summary
+        %p
+          =article.data.summary
         =link_to 'Read more »', article
   -if paginate
     %span.pagination
