--- a/source/layouts/layout_homepage.haml
+++ b/source/layouts/layout_homepage.haml
@@ -8,7 +8,7 @@
     /[if lt IE 7]<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     = partial("partials/main-nav")
     %header
-      %div{:role => "main", :class => "main"}
+      %div{:role => "main"}
         = yield
     = partial("partials/footer")
 
