--- a/source/blog/tag.html.haml
+++ b/source/blog/tag.html.haml
@@ -4,5 +4,4 @@ blog: blog
 layout: layout
 pageable: true
 ---
--content_for(:title, "Posts tagged #{tagname}")
-=partial "blog/articles"
+%section.tag-section
