--- a/source/assets/stylesheets/partials/_pages.scss
+++ b/source/assets/stylesheets/partials/_pages.scss
@@ -13,6 +13,7 @@
   }
   .btn{
     margin-bottom: 20px;
+    text-decoration: none;
   }
   .post{
     border-top: 2px solid #ddd;
@@ -49,6 +50,9 @@
   }
   .post-title{
     line-height: 1.3;
+    a{
+      text-decoration: none;
+    }
   }
   article{
     .grid{
@@ -58,6 +62,23 @@
       .col-9-12{
         padding: 0px 0px 30px 0px;
       }
+    }
+  }
+  header{
+    h1{
+      a{
+        text-decoration: none;
+      }
+    }
+  }
+}
+.tag-section{
+  padding: 50px 20px 50px 20px;
+  ul{
+    li{
+      margin: 10px 0px 10px 0px;
+      background-color: #f0f0f0;
+      padding: 20px;
     }
   }
 }
