--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -39,7 +39,7 @@ blog: blog
               %div{:class => 'small-grid'}
                 %div{:class => 'col-3-12'}
                   %h1.post-title
-                    <i class="fa fa-chain"></i>
+                    <i class="fa fa-#{article.data.icon}"></i>
                     %span.date-meta
                       =article.date.strftime('%b %e')
                 %div{:class => 'col-9-12'}
@@ -51,7 +51,7 @@ blog: blog
           %h2
             Activities
             %span
-              %a.btn{href: "/blog"} View more »
+              %a.btn{href: "/activities"} View more »
           -latest_articles[0...3].each do |article|
             %div{:class => 'post'}
               %div{:class => 'small-grid'}
