--- a/source/layouts/item.haml
+++ b/source/layouts/item.haml
@@ -5,13 +5,5 @@
         %h1=blog_link current_page
         %p
           =dt current_page.date
-          %span=tag_list current_page.data.tags
+          %span.tags=tag_list current_page.data.tags
       =yield
-      / -if current_page.previous_article
-      /   %span.prev
-      /     &laquo;
-      /     =link_to truncate(current_page.previous_article.title, length: 30), current_page.previous_article
-      / -if current_page.next_article
-      /   %span.next
-      /     =link_to truncate(current_page.next_article.title, length: 30), current_page.next_article
-      /     &raquo;
