--- a/source/portfolio/_articles.html.haml
+++ b/source/portfolio/_articles.html.haml
@@ -1,5 +1,5 @@
 %ul
   -page_articles.each do |article|
     %li
-      %span=article.date.strftime("%b %d")
+      %span.tags=article.date.strftime("%b %d")
       =link_to article.title, article
