--- a/source/portfolio/tags.html.haml
+++ b/source/portfolio/tags.html.haml
@@ -3,8 +3,9 @@ title: "TODO"
 blog: blog
 layout: layout
 ---
-%ul
-  -blog("blog").tags.sort_by{|t| t[0] }.each do |tag_name, articles|
-    %li
-      =link_to tag_name, "/blog/tags/#{tag_name}"
-      (#{articles.count})
+%section.tag-section
+  %ul
+    -blog("portfolio").tags.each do |tag, articles|
+      %li
+        =link_to tag, tag_path(tag)
+        (#{articles.count})
