--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -52,12 +52,12 @@ blog: blog
             Activities
             %span
               %a.btn{href: "/activities"} View more »
-          -latest_articles[0...3].each do |article|
+          -blog.articles.sort_by{|i| i.data.kind == :activity}[0...3].each do |article, i|
             %div{:class => 'post'}
               %div{:class => 'small-grid'}
                 %div{:class => 'col-3-12'}
                   %h1.post-title
-                    <i class="fa fa-chain"></i>
+                    <i class="fa fa-#{article.data.icon}"></i>
                     %span.date-meta
                       =article.date.strftime('%b %e')
                 %div{:class => 'col-9-12'}
