Updated site to run off of one blog, removed portfolio blog structure, updated stubbed posts with meta data, added activities page

--- a/source/assets/stylesheets/partials/_pages.scss
+++ b/source/assets/stylesheets/partials/_pages.scss
@@ -41,6 +41,7 @@
     padding: 30px;
   }
 }
+.feature,
 .blog{
   .article-date{
     font-size: 16px;
@@ -70,6 +71,11 @@
         text-decoration: none;
       }
     }
+  }
+}
+.activities{
+  article.blog{
+    padding-bottom: 30px;
   }
 }
 .tag-section{
