--- a/source/assets/stylesheets/partials/_base.scss
+++ b/source/assets/stylesheets/partials/_base.scss
@@ -151,6 +151,18 @@ img.profile{
   }
 }
 .blog{
+  @extend .cf;
+  p{
+    line-height: 1.5;
+    color: #999;
+    font-size: 16px;
+  }
+  img{
+    max-width: 100%;
+    height: auto;
+  }
+}
+.feature{
   p{
     line-height: 1.5;
     color: #999;
@@ -191,7 +203,7 @@ img.profile{
   }
 }
 .main-blog{
-  padding: 50px 20px 50px 20px;
+  padding: 50px 20px 0px 20px;
 }
 .tags{
   line-height: 1.5;
