--- a/source/layouts/post.haml
+++ b/source/layouts/post.haml
@@ -2,19 +2,23 @@
   %section
     %article{class: current_page.data.link ? "blog link" : "blog"}
       %header
-        %h1
-          %span.post-icon
-            <i class="fa fa-#{current_page.data.icon}"></i>
-          =blog_link current_page
-        %p
-          =dt current_page.date
-          %span.tags=tag_list current_page.data.tags
-      =yield
-      -if current_page.previous_article
-        %span.prev
-          &laquo;
-          =link_to truncate(current_page.previous_article.title, length: 30), current_page.previous_article
-      -if current_page.next_article
-        %span.next
-          =link_to truncate(current_page.next_article.title, length: 30), current_page.next_article
-          &raquo;
+        %div{:class => 'cf'}
+          %div{:class => 'col-2-12'}
+            %h1
+              %span.post-icon
+                <i class="fa fa-#{current_page.data.icon}"></i>
+          %div{:class => 'col-10-12'}
+            %h1
+              =blog_link current_page
+            %p
+              =dt current_page.date
+              %span.tags=tag_list current_page.data.tags
+            =yield
+            -if current_page.previous_article
+              %span.prev
+                &laquo;
+                =link_to truncate(current_page.previous_article.title, length: 30), current_page.previous_article
+            -if current_page.next_article
+              %span.next
+                =link_to truncate(current_page.next_article.title, length: 30), current_page.next_article
+                &raquo;
