--- a/source/portfolio.html.haml
+++ b/source/portfolio.html.haml
@@ -7,13 +7,17 @@ layout: layout_portfolio
 - blog.articles.select { |i| i.data.kind == 'portfolio' }.each do |article|
   .feature
     %div{:class => 'grid grid-pad'}
-      %div{:class => "col-6-12"}
-        %div{:class => "port-item"}
-          %h1.post-title
-            <i class="fa fa-#{article.data.icon}"></i>
-            =blog_link article
-          %img{:src => "#{article.data.image}"}
-          %div{:class => 'tags'}
-            =tag_list article.tags
-          %p
-            =article.data.summary
+      %div{:class => 'col-6-12'}
+        %div{:class => 'port-item'}
+          %div{:class => 'cf'}
+            %div{:class => 'col-2-12'}
+              %h1.post-title
+                <i class="fa fa-#{article.data.icon}"></i>
+            %div{:class => 'col-10-12'}
+              %h1.post-title
+                =blog_link article
+              %img{:src => "#{article.data.image}"}
+              %div{:class => 'tags'}
+                =tag_list article.tags
+              %p
+                =article.data.summary
