--- a/source/assets/stylesheets/partials/_syntax.scss
+++ b/source/assets/stylesheets/partials/_syntax.scss
@@ -1,94 +1,214 @@
-$nav-bg: #393939;
-$examples-bg: #393939;
-$code-bg: #292929;
-$code-annotation-bg: #1c1c1c;
-$nav-subitem-bg: #262626;
-$nav-active-bg: #2467af;
-$lang-select-border: #000;
-$lang-select-bg: #222;
-$lang-select-active-bg: $examples-bg; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111; // color of language tab bg when mouse is pressed
-$main-bg: #eaf2f6;
-$aside-notice-bg: #8fbcd4;
-$aside-warning-bg: #c97a7e;
-$aside-success-bg: #6ac174;
-$search-notice-bg: #c97a7e;
+/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+java+php+coffeescript+scss+bash+c+cpp+python+sql+groovy+http+ruby+csharp+go+scala+swift&plugins=line-highlight+line-numbers */
+/**
+* prism.js default theme for JavaScript, CSS and HTML
+* Based on dabblet (http://dabblet.com)
+* @author Lea Verou
+*/
+
+code[class*="language-"],
+pre[class*="language-"] {
+color: black;
+text-shadow: 0 1px white;
+font-family: Consolas, Monaco, 'Andale Mono', monospace;
+direction: ltr;
+text-align: left;
+white-space: pre;
+word-spacing: normal;
+word-break: normal;
 
 
-// TEXT COLORS
-////////////////////
-$main-text: #333; // main content text color
-$nav-text: #fff;
-$nav-active-text: #fff;
-$lang-select-text: #fff; // color of unselected language tab text
-$lang-select-active-text: #fff; // color of selected language tab text
-$lang-select-pressed-text: #fff; // color of language tab text when mouse is pressed
+-moz-tab-size: 2;
+-o-tab-size: 2;
+tab-size: 2;
 
-
-// SIZES
-////////////////////
-$nav-width: 230px; // width of the navbar
-$examples-width: 50%; // portion of the screen taken up by code examples
-$logo-margin: 20px; // margin between nav items and logo, ignored if search is active
-$main-padding: 28px; // padding to left and right of content & examples
-$nav-padding: 15px; // padding to left and right of navbar
-$nav-v-padding: 10px; // padding used vertically around search boxes and results
-$nav-indent: 10px; // extra padding for ToC subitems
-$code-annotation-padding: 13px; // padding inside code annotations
-$h1-margin-bottom: 21px; // padding under the largest header tags
-$tablet-width: 930px; // min width before reverting to tablet size
-$phone-width: $tablet-width - $nav-width; // min width before reverting to mobile size
-
-
-// FONTS
-////////////////////
-%default-font {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
+-webkit-hyphens: none;
+-moz-hyphens: none;
+-ms-hyphens: none;
+hyphens: none;
 }
 
-%header-font {
-  @extend %default-font;
-  font-weight: bold;
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+text-shadow: none;
+background: #b3d4fc;
 }
 
-%code-font {
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 12px;
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+text-shadow: none;
+background: #b3d4fc;
+}
+
+@media print {
+code[class*="language-"],
+pre[class*="language-"] {
+text-shadow: none;
+}
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+padding: 1em;
+margin: .5em 0;
+overflow: auto;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+background: #f5f2f0;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+padding: .1em;
+border-radius: .3em;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+color: slategray;
+}
+
+.token.punctuation {
+color: #999;
+}
+
+.namespace {
+opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol {
+color: #905;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.builtin {
+color: #690;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+color: #a67f59;
+background: hsla(0,0%,100%,.5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+color: #07a;
 }
 
 
-// OTHER
-////////////////////
-$nav-active-shadow: #000;
-$nav-footer-border-color: #666;
-$nav-embossed-border-top: #000;
-$nav-embossed-border-bottom: #939393;
-$main-embossed-text-shadow: 0px 1px 0px #fff;
-$search-box-border-color: #666;
-
-
-////////////////////////////////////////////////////////////////////////////////
-// INTERNAL
-////////////////////////////////////////////////////////////////////////////////
-// These settings are probably best left alone.
-
-%break-words {
- -ms-word-break: break-all;
-     word-break: break-all;
-
-     /* Non standard for webkit */
-     word-break: break-word;
-
--webkit-hyphens: auto;
-   -moz-hyphens: auto;
-        hyphens: auto;
+.token.regex,
+.token.important {
+color: #e90;
 }
 
-.highlight .c, .highlight .cm, .highlight .c1, .highlight .cs {
-  color: #909090;
+.token.important {
+font-weight: bold;
 }
 
-.highlight, .highlight .w {
-  background-color: $code-bg;
+.token.entity {
+cursor: help;
+}
+
+pre[data-line] {
+position: relative;
+padding: 1em 0 1em 3em;
+}
+
+.line-highlight {
+position: absolute;
+left: 0;
+right: 0;
+padding: inherit 0;
+margin-top: 1em; /* Same as .prism’s padding-top */
+
+background: hsla(24, 20%, 50%,.08);
+background: -moz-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+background: -webkit-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+background: -o-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+background: linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+
+pointer-events: none;
+
+line-height: inherit;
+white-space: pre;
+}
+
+.line-highlight:before,
+.line-highlight[data-end]:after {
+content: attr(data-start);
+position: absolute;
+top: .4em;
+left: .6em;
+min-width: 1em;
+padding: 0 .5em;
+background-color: hsla(24, 20%, 50%,.4);
+color: hsl(24, 20%, 95%);
+font: bold 65%/1.5 sans-serif;
+text-align: center;
+vertical-align: .3em;
+border-radius: 999px;
+text-shadow: none;
+box-shadow: 0 1px white;
+}
+
+.line-highlight[data-end]:after {
+content: attr(data-end);
+top: auto;
+bottom: .4em;
+}
+pre.line-numbers {
+position: relative;
+padding-left: 3.8em;
+counter-reset: linenumber;
+}
+
+pre.line-numbers > code {
+position: relative;
+}
+
+.line-numbers .line-numbers-rows {
+position: absolute;
+pointer-events: none;
+top: 0;
+font-size: 100%;
+left: -3.8em;
+width: 3em; /* works for line-numbers below 1000 lines */
+letter-spacing: -1px;
+border-right: 1px solid #999;
+
+-webkit-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+
+}
+
+.line-numbers-rows > span {
+pointer-events: none;
+display: block;
+counter-increment: linenumber;
+}
+
+.line-numbers-rows > span:before {
+content: counter(linenumber);
+color: #999;
+display: block;
+padding-right: 0.8em;
+text-align: right;
 }
