--- a/source/assets/stylesheets/partials/_syntax.scss
+++ b/source/assets/stylesheets/partials/_syntax.scss
@@ -1,214 +1,83 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+java+php+coffeescript+scss+bash+c+cpp+python+sql+groovy+http+ruby+csharp+go+scala+swift&plugins=line-highlight+line-numbers */
-/**
-* prism.js default theme for JavaScript, CSS and HTML
-* Based on dabblet (http://dabblet.com)
-* @author Lea Verou
-*/
-
-code[class*="language-"],
-pre[class*="language-"] {
-color: black;
-text-shadow: 0 1px white;
-font-family: Consolas, Monaco, 'Andale Mono', monospace;
-direction: ltr;
-text-align: left;
-white-space: pre;
-word-spacing: normal;
-word-break: normal;
-
-
--moz-tab-size: 2;
--o-tab-size: 2;
-tab-size: 2;
-
--webkit-hyphens: none;
--moz-hyphens: none;
--ms-hyphens: none;
-hyphens: none;
+.c { color: #999988; font-style: italic } /* Comment */
+.err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.k { color: #000000; font-weight: bold } /* Keyword */
+.o { color: #000000; font-weight: bold } /* Operator */
+.cm { color: #999988; font-style: italic } /* Comment.Multiline */
+.cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
+.c1 { color: #999988; font-style: italic } /* Comment.Single */
+.cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
+.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
+.ge { color: #000000; font-style: italic } /* Generic.Emph */
+.gr { color: #aa0000 } /* Generic.Error */
+.gh { color: #999999 } /* Generic.Heading */
+.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
+.go { color: #888888 } /* Generic.Output */
+.gp { color: #555555 } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #aaaaaa } /* Generic.Subheading */
+.gt { color: #aa0000 } /* Generic.Traceback */
+.kc { color: #000000; font-weight: bold } /* Keyword.Constant */
+.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
+.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #445588; font-weight: bold } /* Keyword.Type */
+.m { color: #009999 } /* Literal.Number */
+.s { color: #d01040 } /* Literal.String */
+.na { color: #008080 } /* Name.Attribute */
+.nb { color: #0086B3 } /* Name.Builtin */
+.nc { color: #445588; font-weight: bold } /* Name.Class */
+.no { color: #008080 } /* Name.Constant */
+.nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
+.ni { color: #800080 } /* Name.Entity */
+.ne { color: #990000; font-weight: bold } /* Name.Exception */
+.nf { color: #990000; font-weight: bold } /* Name.Function */
+.nl { color: #990000; font-weight: bold } /* Name.Label */
+.nn { color: #555555 } /* Name.Namespace */
+.nt { color: #000080 } /* Name.Tag */
+.nv { color: #008080 } /* Name.Variable */
+.ow { color: #000000; font-weight: bold } /* Operator.Word */
+.w { color: #bbbbbb } /* Text.Whitespace */
+.mf { color: #009999 } /* Literal.Number.Float */
+.mh { color: #009999 } /* Literal.Number.Hex */
+.mi { color: #009999 } /* Literal.Number.Integer */
+.mo { color: #009999 } /* Literal.Number.Oct */
+.sb { color: #d01040 } /* Literal.String.Backtick */
+.sc { color: #d01040 } /* Literal.String.Char */
+.sd { color: #d01040 } /* Literal.String.Doc */
+.s2 { color: #d01040 } /* Literal.String.Double */
+.se { color: #d01040 } /* Literal.String.Escape */
+.sh { color: #d01040 } /* Literal.String.Heredoc */
+.si { color: #d01040 } /* Literal.String.Interpol */
+.sx { color: #d01040 } /* Literal.String.Other */
+.sr { color: #009926 } /* Literal.String.Regex */
+.s1 { color: #d01040 } /* Literal.String.Single */
+.ss { color: #990073 } /* Literal.String.Symbol */
+.bp { color: #999999 } /* Name.Builtin.Pseudo */
+.vc { color: #008080 } /* Name.Variable.Class */
+.vg { color: #008080 } /* Name.Variable.Global */
+.vi { color: #008080 } /* Name.Variable.Instance */
+.il { color: #009999 } /* Literal.Number.Integer.Long */
+pre{
+  background: transparent;
+  padding: 0;
+  margin: 20px 0px 0px 0px;
+  white-space: pre;
+  overflow-x: auto;
+  word-break: inherit;
+  word-wrap: inherit;
 }
-
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-text-shadow: none;
-background: #b3d4fc;
+.highlight td{
+  padding: 8px 15px;
 }
-
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-text-shadow: none;
-background: #b3d4fc;
-}
-
-@media print {
-code[class*="language-"],
-pre[class*="language-"] {
-text-shadow: none;
-}
-}
-
-/* Code blocks */
-pre[class*="language-"] {
-padding: 1em;
-margin: .5em 0;
-overflow: auto;
-}
-
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-background: #f5f2f0;
-}
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-padding: .1em;
-border-radius: .3em;
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-color: slategray;
-}
-
-.token.punctuation {
-color: #999;
-}
-
-.namespace {
-opacity: .7;
-}
-
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol {
-color: #905;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.builtin {
-color: #690;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-color: #a67f59;
-background: hsla(0,0%,100%,.5);
-}
-
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-color: #07a;
-}
-
-
-.token.regex,
-.token.important {
-color: #e90;
-}
-
-.token.important {
-font-weight: bold;
-}
-
-.token.entity {
-cursor: help;
-}
-
-pre[data-line] {
-position: relative;
-padding: 1em 0 1em 3em;
-}
-
-.line-highlight {
-position: absolute;
-left: 0;
-right: 0;
-padding: inherit 0;
-margin-top: 1em; /* Same as .prism’s padding-top */
-
-background: hsla(24, 20%, 50%,.08);
-background: -moz-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
-background: -webkit-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
-background: -o-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
-background: linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
-
-pointer-events: none;
-
-line-height: inherit;
-white-space: pre;
-}
-
-.line-highlight:before,
-.line-highlight[data-end]:after {
-content: attr(data-start);
-position: absolute;
-top: .4em;
-left: .6em;
-min-width: 1em;
-padding: 0 .5em;
-background-color: hsla(24, 20%, 50%,.4);
-color: hsl(24, 20%, 95%);
-font: bold 65%/1.5 sans-serif;
-text-align: center;
-vertical-align: .3em;
-border-radius: 999px;
-text-shadow: none;
-box-shadow: 0 1px white;
-}
-
-.line-highlight[data-end]:after {
-content: attr(data-end);
-top: auto;
-bottom: .4em;
-}
-pre.line-numbers {
-position: relative;
-padding-left: 3.8em;
-counter-reset: linenumber;
-}
-
-pre.line-numbers > code {
-position: relative;
-}
-
-.line-numbers .line-numbers-rows {
-position: absolute;
-pointer-events: none;
-top: 0;
-font-size: 100%;
-left: -3.8em;
-width: 3em; /* works for line-numbers below 1000 lines */
-letter-spacing: -1px;
-border-right: 1px solid #999;
-
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
-
-}
-
-.line-numbers-rows > span {
-pointer-events: none;
-display: block;
-counter-increment: linenumber;
-}
-
-.line-numbers-rows > span:before {
-content: counter(linenumber);
-color: #999;
-display: block;
-padding-right: 0.8em;
-text-align: right;
+.gl{
+  background: #fafafa;
+  border-right: 1px solid #ddd;
+  color: #999;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
